base pages + tracking manager + local save

--- a/snow-buddy/Info.plist
+++ b/snow-buddy/Info.plist
@@ -4,31 +4,39 @@
 <dict>
 	<key>CFBundleURLTypes</key>
 	<array>
-        <dict>
-            <key>CFBundleURLName</key>
-            <string>com.zzillzz.snowbuddy</string>
-            <key>CFBundleURLSchemes</key>
-            <array>
-                <string>snow-buddy-app</string>
-            </array>
+		<dict>
+			<key>CFBundleURLName</key>
+			<string>com.zzillzz.snowbuddy</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>snow-buddy-app</string>
+			</array>
 		</dict>
 	</array>
-    <key>SupabaseURL</key>
-    <string>$(SUPABASE_URL)</string>
-    <key>SupabaseKey</key>
-    <string>$(SUPABASE_KEY)</string>
-    <key>NSAppTransportSecurity</key>
-    <dict>
-        <key>NSExceptionDomains</key>
-        <dict>
-            <key>localhost</key>
-            <dict>
-                <key>NSExceptionAllowsInsecureHTTPLoads</key>
-                <true/>
-                <key>NSExceptionMinimumTLSVersion</key>
-                <string>TLSv1.0</string>
-            </dict>
-        </dict>
-    </dict>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSExceptionDomains</key>
+		<dict>
+			<key>localhost</key>
+			<dict>
+				<key>NSExceptionAllowsInsecureHTTPLoads</key>
+				<true/>
+				<key>NSExceptionMinimumTLSVersion</key>
+				<string>TLSv1.0</string>
+			</dict>
+		</dict>
+	</dict>
+	<key>SupabaseKey</key>
+	<string>$(SUPABASE_KEY)</string>
+	<key>SupabaseURL</key>
+	<string>$(SUPABASE_URL)</string>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Lexend-VariableFont_wght.ttf</string>
+	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>location</string>
+	</array>
 </dict>
 </plist>
