--- a/snow-buddy/Info.plist
+++ b/snow-buddy/Info.plist
@@ -32,6 +32,8 @@
 	<string>$(SUPABASE_KEY)</string>
 	<key>SupabaseURL</key>
 	<string>$(SUPABASE_URL)</string>
+    <key>MapboxAccessToken</key>
+    <string>$(MBX_ACCESS_TOKEN)</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Lexend-VariableFont_wght.ttf</string>
